// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`false NotificationBadge 1`] = `
<Button
  variant="plain"
>
  <span
    className="pf-c-notification-badge pf-m-unread"
  >
    unread
     Badge
  </span>
</Button>
`;

exports[`true NotificationBadge 1`] = `
<Button
  variant="plain"
>
  <span
    className="pf-c-notification-badge pf-m-read"
  >
    read
     Badge
  </span>
</Button>
`;
